Increase gallery sync schedule to hourly

--- a/.github/workflows/sync-onedrive-cloudinary.yml
+++ b/.github/workflows/sync-onedrive-cloudinary.yml
@@ -3,7 +3,7 @@ name: Sync Graph to Cloudinary
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "0 * * * *"
 
 concurrency:
   group: graph-cloudinary-sync
